--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -2,19 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "from bs4 import BeautifulSoup\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import nltk\n",
+    "import math\n",
+    "import time\n",
+    "import re\n",
+    "import os\n",
+    "import seaborn as sns\n",
+    "from collections import Counter\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity  \n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "from matplotlib import gridspec\n",
+    "from scipy.sparse import hstack\n",
+    "import plotly\n",
+    "import plotly.figure_factory as ff\n",
+    "from plotly.graph_objs import Scatter, Layout\n",
+    "\n",
+    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
