--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -34,18 +34,7 @@
     "from plotly.graph_objs import Scatter, Layout\n",
     "\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
