--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -1,10 +1,46 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Amazon Apparel Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[4.2] Data and Code:\n",
+    "(https://drive.google.com/open?id=0BwNkduBnePt2VWhCYXhMV3p4dTg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[4.3] Overview of the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/plain": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ]
+     },
+     "execution_count": 0,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from PIL import Image\n",
     "import requests\n",
@@ -21,17 +57,17 @@
     "import time\n",
     "import re\n",
     "import os\n",
-    "import seaborn as sns\n",
+    "#import seaborn as sns\n",
     "from collections import Counter\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "'''from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity  \n",
-    "from sklearn.metrics import pairwise_distances\n",
+    "from sklearn.metrics import pairwise_distances'''\n",
     "from matplotlib import gridspec\n",
     "from scipy.sparse import hstack\n",
     "import plotly\n",
     "import plotly.figure_factory as ff\n",
-    "from plotly.graph_objs import Scatter, Layout\n",
+    "#from plotly.graph_objs import Scatter, Layout\n",
     "\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -39,9 +75,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Users\\DELL\\PythonProjects\\Amazon-Recomendation-System\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())\n",
+    "data = pd.read_json(open('tops_fashion.json', \"r\", encoding=\"utf8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points :  183138\nNumber of features/variables: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Number of data points : ', data.shape[0])\n",
+    "print ('Number of features/variables:', data.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
