--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -77,19 +77,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Users\\DELL\\PythonProjects\\Amazon-Recomendation-System\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "print(os.getcwd())\n",
-    "data = pd.read_json(open('tops_fashion.json', \"r\", encoding=\"utf8\"))"
+    "# we have give a json file which consists of all information about\n",
+    "# the products\n",
+    "# loading the data using pandas' read_json file.\n",
+    "'''import os\n",
+    "print(os.getcwd())'''\n",
+    "#the above code is to check which directory i am in\n",
+    "data = pd.read_json(open('/Users\\DELL\\PythonProjects\\RECOMENDATION_ENGINE/tops_fashion.json', \"r\", encoding=\"utf8\"))"
    ]
   },
   {
@@ -113,28 +109,370 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Terminology:\n",
+    "What is a dataset? <br>\n",
+    "Rows and columns <br>\n",
+    "Data-point <br>\n",
+    "Feature/variable <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['asin', 'author', 'availability', 'availability_type', 'brand', 'color',\n       'editorial_reivew', 'editorial_review', 'formatted_price',\n       'large_image_url', 'manufacturer', 'medium_image_url', 'model',\n       'product_type_name', 'publisher', 'reviews', 'sku', 'small_image_url',\n       'title'],\n      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# each product/item has 19 features in the raw dataset.\n",
+    "data.columns # prints column-names or feature-names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[['asin', 'brand', 'color', 'medium_image_url', 'product_type_name', 'title', 'formatted_price']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points :  183138 Number of features: 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>color</th>\n",
+       "      <th>medium_image_url</th>\n",
+       "      <th>product_type_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>formatted_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B016I2TS4W</td>\n",
+       "      <td>FNC7C</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Minions Como Superheroes Ironman Long Sleeve R...</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B01N49AI08</td>\n",
+       "      <td>FIG Clothing</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>FIG Clothing Womens Izo Tunic</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B01JDPCOHO</td>\n",
+       "      <td>FIG Clothing</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>FIG Clothing Womens Won Top</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B01N19U5H5</td>\n",
+       "      <td>Focal18</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Focal18 Sailor Collar Bubble Sleeve Blouse Shi...</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B004GSI2OS</td>\n",
+       "      <td>FeatherLite</td>\n",
+       "      <td>Onyx Black/ Stone</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Featherlite Ladies' Long Sleeve Stain Resistan...</td>\n",
+       "      <td>$26.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>color</th>\n",
+       "      <th>medium_image_url</th>\n",
+       "      <th>product_type_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>formatted_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B016I2TS4W</td>\n",
+       "      <td>FNC7C</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Minions Como Superheroes Ironman Long Sleeve R...</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B01N49AI08</td>\n",
+       "      <td>FIG Clothing</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>FIG Clothing Womens Izo Tunic</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B01JDPCOHO</td>\n",
+       "      <td>FIG Clothing</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>FIG Clothing Womens Won Top</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B01N19U5H5</td>\n",
+       "      <td>Focal18</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Focal18 Sailor Collar Bubble Sleeve Blouse Shi...</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B004GSI2OS</td>\n",
+       "      <td>FeatherLite</td>\n",
+       "      <td>Onyx Black/ Stone</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Featherlite Ladies' Long Sleeve Stain Resistan...</td>\n",
+       "      <td>$26.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print ('Number of data points : ', data.shape[0], \\\n",
+    "       'Number of features:', data.shape[1])\n",
+    "data.head() # prints the top rows in the table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [5.1] Missing data for various features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Basic stats for the feature: product_type_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     183138\nunique        72\ntop        SHIRT\nfreq      167794\nName: product_type_name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We have total 72 unique type of product_type_names\n",
+    "print(data['product_type_name'].describe())\n",
+    "\n",
+    "# 91.62% (167794/183138) of the products are shirts,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SHIRT' 'SWEATER' 'APPAREL' 'OUTDOOR_RECREATION_PRODUCT'\n 'BOOKS_1973_AND_LATER' 'PANTS' 'HAT' 'SPORTING_GOODS' 'DRESS' 'UNDERWEAR'\n 'SKIRT' 'OUTERWEAR' 'BRA' 'ACCESSORY' 'ART_SUPPLIES' 'SLEEPWEAR'\n 'ORCA_SHIRT' 'HANDBAG' 'PET_SUPPLIES' 'SHOES' 'KITCHEN' 'ADULT_COSTUME'\n 'HOME_BED_AND_BATH' 'MISC_OTHER' 'BLAZER' 'HEALTH_PERSONAL_CARE'\n 'TOYS_AND_GAMES' 'SWIMWEAR' 'CONSUMER_ELECTRONICS' 'SHORTS' 'HOME'\n 'AUTO_PART' 'OFFICE_PRODUCTS' 'ETHNIC_WEAR' 'BEAUTY'\n 'INSTRUMENT_PARTS_AND_ACCESSORIES' 'POWERSPORTS_PROTECTIVE_GEAR' 'SHIRTS'\n 'ABIS_APPAREL' 'AUTO_ACCESSORY' 'NONAPPARELMISC' 'TOOLS' 'BABY_PRODUCT'\n 'SOCKSHOSIERY' 'POWERSPORTS_RIDING_SHIRT' 'EYEWEAR' 'SUIT'\n 'OUTDOOR_LIVING' 'POWERSPORTS_RIDING_JACKET' 'HARDWARE' 'SAFETY_SUPPLY'\n 'ABIS_DVD' 'VIDEO_DVD' 'GOLF_CLUB' 'MUSIC_POPULAR_VINYL'\n 'HOME_FURNITURE_AND_DECOR' 'TABLET_COMPUTER' 'GUILD_ACCESSORIES'\n 'ABIS_SPORTS' 'ART_AND_CRAFT_SUPPLY' 'BAG' 'MECHANICAL_COMPONENTS'\n 'SOUND_AND_RECORDING_EQUIPMENT' 'COMPUTER_COMPONENT' 'JEWELRY'\n 'BUILDING_MATERIAL' 'LUGGAGE' 'BABY_COSTUME' 'POWERSPORTS_VEHICLE_PART'\n 'PROFESSIONAL_HEALTHCARE' 'SEEDS_AND_PLANTS' 'WIRELESS_ACCESSORY']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# names of different product types\n",
+    "print(data['product_type_name'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('SHIRT', 167794),\n ('APPAREL', 3549),\n ('BOOKS_1973_AND_LATER', 3336),\n ('DRESS', 1584),\n ('SPORTING_GOODS', 1281),\n ('SWEATER', 837),\n ('OUTERWEAR', 796),\n ('OUTDOOR_RECREATION_PRODUCT', 729),\n ('ACCESSORY', 636),\n ('UNDERWEAR', 425)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the 10 most frequent product_type_names.\n",
+    "product_type_count = Counter(list(data['product_type_name']))\n",
+    "product_type_count.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####  Basic stats for the feature: brand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# there are 10577 unique brands\n",
+    "print(data['brand'].describe())\n",
+    "\n",
+    "# 183138 - 182987 = 151 missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
