--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -424,9 +424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     182987\nunique     10577\ntop         Zago\nfreq         223\nName: brand, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# there are 10577 unique brands\n",
     "print(data['brand'].describe())\n",
