the count of different object is calculated

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -444,6 +444,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Zago', 223),\n ('XQS', 222),\n ('Yayun', 215),\n ('YUNY', 198),\n ('XiaoTianXin-women clothes', 193),\n ('Generic', 192),\n ('Boohoo', 190),\n ('Alion', 188),\n ('Abetteric', 187),\n ('TheMogan', 187)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brand_count = Counter(list(data['brand']))\n",
+    "brand_count.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Basic stats for the feature: color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data['color'].describe())\n",
+    "\n",
+    "\n",
+    "# we have 7380 unique colors\n",
+    "# 7.2% of products are black in color\n",
+    "# 64956 of 183138 products have brand information. That's approx 35.4%."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
