different colors viewed

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -472,9 +472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     64956\nunique     7380\ntop       Black\nfreq      13207\nName: color, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(data['color'].describe())\n",
     "\n",
@@ -486,10 +494,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 118182),\n ('Black', 13207),\n ('White', 8616),\n ('Blue', 3570),\n ('Red', 2289),\n ('Pink', 1842),\n ('Grey', 1499),\n ('*', 1388),\n ('Green', 1258),\n ('Multi', 1203)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "color_count = Counter(list(data['color']))\n",
+    "color_count.most_common(10)"
+   ]
   },
   {
    "cell_type": "code",
