pickel files added

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -514,6 +514,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Basic stats for the feature: formatted_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count      28395\nunique      3135\ntop       $19.99\nfreq         945\nName: formatted_price, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['formatted_price'].describe())\n",
+    "\n",
+    "# Only 28,395 (15.5% of whole data) products with price information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 154743),\n ('$19.99', 945),\n ('$9.99', 749),\n ('$9.50', 601),\n ('$14.99', 472),\n ('$7.50', 463),\n ('$24.99', 414),\n ('$29.99', 370),\n ('$8.99', 343),\n ('$9.01', 336)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_count = Counter(list(data['formatted_price']))\n",
+    "price_count.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic stats for the feature: title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count                                                183138\nunique                                               175985\ntop       Nakoda Cotton Self Print Straight Kurti For Women\nfreq                                                     77\nName: title, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['title'].describe())\n",
+    "\n",
+    "# All of the products have a title. \n",
+    "# Titles are fairly descriptive of what the product is. \n",
+    "# We use titles extensively in this workshop \n",
+    "# as they are short and informative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
