null datapoints are removed

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -591,24 +591,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_pickle('pickels/180k_apparel_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   We save data files at every major step in our processing in \"pickle\" files. If you are stuck anywhere (or) if some code takes too long to run on your laptop, you may use the pickle files we give you to speed things up."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# consider products which have price information\n",
+    "# data['formatted_price'].isnull() => gives the information \n",
+    "#about the dataframe row's which have null values price == None|Null\n",
+    "data = data.loc[~data['formatted_price'].isnull()]\n",
+    "print('Number of data points After eliminating price=NULL :', data.shape[0])"
+   ]
   },
   {
    "cell_type": "code",
