duplicate titles are removed

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -607,9 +607,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points After eliminating price=NULL : 28395\n"
+     ]
+    }
+   ],
    "source": [
     "# consider products which have price information\n",
     "# data['formatted_price'].isnull() => gives the information \n",
@@ -619,46 +627,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We brought down the number of data points from 183K  to 28K.\n",
+    "\n",
+    "We are processing only 28K points so that most of the workshop participants can run this code on thier laptops in a reasonable amount of time. <br> \n",
+    "\n",
+    "For those of you who have powerful computers and some time to spare, you are recommended to use all of the 183K images.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_pickle('pickels/180k_apparel_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfrom PIL import Image\\nimport requests\\nfrom io import BytesIO\\n\\nfor index, row in images.iterrows():\\n        url = row['large_image_url']\\n        response = requests.get(url)\\n        img = Image.open(BytesIO(response.content))\\n        img.save('images/28k_images/'+row['asin']+'.jpeg')\\n\\n\\n\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can download all these 28k images using this code below.\n",
+    "# You do NOT need to run this code and hence it is commented.\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
+    "for index, row in images.iterrows():\n",
+    "        url = row['large_image_url']\n",
+    "        response = requests.get(url)\n",
+    "        img = Image.open(BytesIO(response.content))\n",
+    "        img.save('images/28k_images/'+row['asin']+'.jpeg')\n",
+    "\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [5.2] Remove near duplicate items"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [5.2.1] Understand about duplicates."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# read data from pickle file from previous stage\n",
+    "data = pd.read_pickle('pickels/180k_apparel_data')\n",
+    "\n",
+    "# find number of products that have duplicate titles.\n",
+    "print(sum(data.duplicated('title')))\n",
+    "# we have 2325 products which have same title but different color\n"
+   ]
   },
   {
    "cell_type": "code",
