dedupe folder added

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,9 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('SHIRT', 167794),\n",
+       " ('APPAREL', 3549),\n",
+       " ('BOOKS_1973_AND_LATER', 3336),\n",
+       " ('DRESS', 1584),\n",
+       " ('SPORTING_GOODS', 1281),\n",
+       " ('SWEATER', 837),\n",
+       " ('OUTERWEAR', 796),\n",
+       " ('OUTDOOR_RECREATION_PRODUCT', 729),\n",
+       " ('ACCESSORY', 636),\n",
+       " ('UNDERWEAR', 425)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find the 10 most frequent product_type_names.\n",
     "product_type_count = Counter(list(data['product_type_name']))\n",
@@ -381,19 +401,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "####  Basic stats for the feature: brand"
+    "Basic stats for the feature: brand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     182987\n",
+      "unique     10577\n",
+      "top         Zago\n",
+      "freq         223\n",
+      "Name: brand, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# there are 10577 unique brands\n",
     "print(data['brand'].describe())\n",
@@ -403,9 +433,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Zago', 223),\n",
+       " ('XQS', 222),\n",
+       " ('Yayun', 215),\n",
+       " ('YUNY', 198),\n",
+       " ('XiaoTianXin-women clothes', 193),\n",
+       " ('Generic', 192),\n",
+       " ('Boohoo', 190),\n",
+       " ('Alion', 188),\n",
+       " ('Abetteric', 187),\n",
+       " ('TheMogan', 187)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "brand_count = Counter(list(data['brand']))\n",
     "brand_count.most_common(10)"
@@ -420,9 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     64956\n",
+      "unique     7380\n",
+      "top       Black\n",
+      "freq      13207\n",
+      "Name: color, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(data['color'].describe())\n",
     "\n",
@@ -434,9 +496,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 118182),\n",
+       " ('Black', 13207),\n",
+       " ('White', 8616),\n",
+       " ('Blue', 3570),\n",
+       " ('Red', 2289),\n",
+       " ('Pink', 1842),\n",
+       " ('Grey', 1499),\n",
+       " ('*', 1388),\n",
+       " ('Green', 1258),\n",
+       " ('Multi', 1203)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "color_count = Counter(list(data['color']))\n",
     "color_count.most_common(10)"
@@ -451,9 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count      28395\n",
+      "unique      3135\n",
+      "top       $19.99\n",
+      "freq         945\n",
+      "Name: formatted_price, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(data['formatted_price'].describe())\n",
     "\n",
@@ -462,9 +556,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 154743),\n",
+       " ('$19.99', 945),\n",
+       " ('$9.99', 749),\n",
+       " ('$9.50', 601),\n",
+       " ('$14.99', 472),\n",
+       " ('$7.50', 463),\n",
+       " ('$24.99', 414),\n",
+       " ('$29.99', 370),\n",
+       " ('$8.99', 343),\n",
+       " ('$9.01', 336)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "price_count = Counter(list(data['formatted_price']))\n",
     "price_count.most_common(10)"
@@ -479,9 +593,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count                                                183138\n",
+      "unique                                               175985\n",
+      "top       Nakoda Cotton Self Print Straight Kurti For Women\n",
+      "freq                                                     77\n",
+      "Name: title, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(data['title'].describe())\n",
     "\n",
@@ -493,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,9 +635,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points After eliminating price=NULL : 28395\n"
+     ]
+    }
+   ],
    "source": [
     "# consider products which have price information\n",
     "# data['formatted_price'].isnull() => gives the information \n",
@@ -533,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,9 +676,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfrom PIL import Image\\nimport requests\\nfrom io import BytesIO\\n\\nfor index, row in images.iterrows():\\n        url = row['large_image_url']\\n        response = requests.get(url)\\n        img = Image.open(BytesIO(response.content))\\n        img.save('images/28k_images/'+row['asin']+'.jpeg')\\n\\n\\n\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# You can download all these 28k images using this code below.\n",
     "# You do NOT need to run this code and hence it is commented.\n",
@@ -581,9 +726,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2326\n"
+     ]
+    }
+   ],
    "source": [
     "# read data from pickle file from previous stage\n",
     "data = pd.read_pickle('pickels/180k_apparel_data')\n",
