--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,18 +818,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>color</th>\n",
+       "      <th>medium_image_url</th>\n",
+       "      <th>product_type_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>formatted_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>B004GSI2OS</td>\n",
+       "      <td>FeatherLite</td>\n",
+       "      <td>Onyx Black/ Stone</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Featherlite Ladies' Long Sleeve Stain Resistan...</td>\n",
+       "      <td>$26.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>B012YX2ZPI</td>\n",
+       "      <td>HX-Kingdom Fashion T-shirts</td>\n",
+       "      <td>White</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Women's Unique 100% Cotton T - Special Olympic...</td>\n",
+       "      <td>$9.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>B001LOUGE4</td>\n",
+       "      <td>Fitness Etc.</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Ladies Cotton Tank 2x1 Ribbed Tank Top</td>\n",
+       "      <td>$11.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>B003BSRPB0</td>\n",
+       "      <td>FeatherLite</td>\n",
+       "      <td>White</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>FeatherLite Ladies' Moisture Free Mesh Sport S...</td>\n",
+       "      <td>$20.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>B014ICEDNA</td>\n",
+       "      <td>FNC7C</td>\n",
+       "      <td>Purple</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Supernatural Chibis Sam Dean And Castiel Short...</td>\n",
+       "      <td>$7.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          asin                        brand              color  \\\n",
+       "4   B004GSI2OS                  FeatherLite  Onyx Black/ Stone   \n",
+       "6   B012YX2ZPI  HX-Kingdom Fashion T-shirts              White   \n",
+       "11  B001LOUGE4                 Fitness Etc.              Black   \n",
+       "15  B003BSRPB0                  FeatherLite              White   \n",
+       "21  B014ICEDNA                        FNC7C             Purple   \n",
+       "\n",
+       "                                     medium_image_url product_type_name  \\\n",
+       "4   https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "6   https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "11  https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "15  https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "21  https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "\n",
+       "                                                title formatted_price  \n",
+       "4   Featherlite Ladies' Long Sleeve Stain Resistan...          $26.26  \n",
+       "6   Women's Unique 100% Cotton T - Special Olympic...           $9.99  \n",
+       "11             Ladies Cotton Tank 2x1 Ribbed Tank Top          $11.99  \n",
+       "15  FeatherLite Ladies' Moisture Free Mesh Sport S...          $20.54  \n",
+       "21  Supernatural Chibis Sam Dean And Castiel Short...           $7.50  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After removal of products with short description: 27958\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove All products with very few words in title\n",
     "data_sorted = data[data['title'].apply(lambda x: len(x.split())>4)]\n",
@@ -838,9 +959,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>color</th>\n",
+       "      <th>medium_image_url</th>\n",
+       "      <th>product_type_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>formatted_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>61973</td>\n",
+       "      <td>B06Y1KZ2WB</td>\n",
+       "      <td>Éclair</td>\n",
+       "      <td>Black/Pink</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>Éclair Women's Printed Thin Strap Blouse Black...</td>\n",
+       "      <td>$24.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>133820</td>\n",
+       "      <td>B010RV33VE</td>\n",
+       "      <td>xiaoming</td>\n",
+       "      <td>Pink</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>xiaoming Womens Sleeveless Loose Long T-shirts...</td>\n",
+       "      <td>$18.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>81461</td>\n",
+       "      <td>B01DDSDLNS</td>\n",
+       "      <td>xiaoming</td>\n",
+       "      <td>White</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>xiaoming Women's White Long Sleeve Single Brea...</td>\n",
+       "      <td>$21.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75995</td>\n",
+       "      <td>B00X5LYO9Y</td>\n",
+       "      <td>xiaoming</td>\n",
+       "      <td>Red Anchors</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>xiaoming Stripes Tank Patch/Bear Sleeve Anchor...</td>\n",
+       "      <td>$15.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>151570</td>\n",
+       "      <td>B00WPJG35K</td>\n",
+       "      <td>xiaoming</td>\n",
+       "      <td>White</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SHIRT</td>\n",
+       "      <td>xiaoming Sleeve Sheer Loose Tassel Kimono Woma...</td>\n",
+       "      <td>$14.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              asin     brand        color  \\\n",
+       "61973   B06Y1KZ2WB    Éclair   Black/Pink   \n",
+       "133820  B010RV33VE  xiaoming         Pink   \n",
+       "81461   B01DDSDLNS  xiaoming        White   \n",
+       "75995   B00X5LYO9Y  xiaoming  Red Anchors   \n",
+       "151570  B00WPJG35K  xiaoming        White   \n",
+       "\n",
+       "                                         medium_image_url product_type_name  \\\n",
+       "61973   https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "133820  https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "81461   https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "75995   https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "151570  https://images-na.ssl-images-amazon.com/images...             SHIRT   \n",
+       "\n",
+       "                                                    title formatted_price  \n",
+       "61973   Éclair Women's Printed Thin Strap Blouse Black...          $24.99  \n",
+       "133820  xiaoming Womens Sleeveless Loose Long T-shirts...          $18.19  \n",
+       "81461   xiaoming Women's White Long Sleeve Single Brea...          $21.58  \n",
+       "75995   xiaoming Stripes Tank Patch/Bear Sleeve Anchor...          $15.91  \n",
+       "151570  xiaoming Sleeve Sheer Loose Tassel Kimono Woma...          $14.32  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sort the whole data based on title (alphabetical order of title) \n",
     "data_sorted.sort_values('title',inplace=True, ascending=False)\n",
@@ -856,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,16 +1174,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points :  17597\n"
+     ]
+    }
+   ],
    "source": [
     "print('Number of data points : ', data.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,9 +1216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-28de7efad93f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mindices\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m         \u001b[1;31m# store the list of words of jth string in b, ex: b = ['tokidoki', 'The', 'Queen', 'of', 'Diamonds', 'Women's', 'Shirt', 'X-Large']\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2948\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2949\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2950\u001b[1;33m         \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem_from_zerodim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2951\u001b[0m         \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2952\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# This code snippet takes significant amount of time.\n",
     "# O(n^2) time.\n",
@@ -1018,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,9 +1284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points after stage two of dedupe:  15\n"
+     ]
+    }
+   ],
    "source": [
     "print('Number of data points after stage two of dedupe: ',data.shape[0])\n",
     "# from 17k apperals we reduced to 16k apperals"
@@ -1039,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,9 +1337,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of stop words: {'being', 'hasn', 'most', 'on', 'too', 'aren', 'those', 'below', 'am', 'all', 'll', 'in', 'ain', \"you'd\", 's', \"she's\", 'with', 'but', 'own', 'didn', 'who', 'when', 'both', 'just', 'at', 'few', \"mightn't\", 'they', 'myself', 't', 'our', \"it's\", 'wouldn', 'over', 'so', 'shouldn', 're', \"shouldn't\", 'is', \"should've\", 'its', 'some', 'other', 'have', 'once', 'he', 'haven', 'and', \"you'll\", \"hasn't\", 'then', 'that', 'whom', 'same', \"needn't\", 'about', 'after', 'hadn', 'needn', 'shan', \"that'll\", \"weren't\", \"isn't\", 'until', 'more', 'what', 'yourself', 'was', 'mightn', 'to', 'each', 'are', 'y', 'me', 'yours', 'she', 'ours', 'should', 'were', 'did', 'a', 'from', 'it', \"won't\", 'for', 'their', 'd', 'an', \"mustn't\", \"wasn't\", 'as', 'these', 'having', 'off', 'where', 'has', 'further', 'into', 'himself', 'doesn', \"couldn't\", 'up', 'can', 'which', 'hers', 'by', 'under', 'this', \"doesn't\", 'such', 'themselves', 'be', \"didn't\", 'against', \"wouldn't\", 'her', 'the', 'you', 'your', 'him', 'while', 'here', \"aren't\", 'won', 'theirs', 'through', 'before', 'o', 'don', 'ma', 'i', \"haven't\", \"you're\", 'do', 'again', 'm', 'couldn', 'not', 'isn', 'weren', 'if', 'nor', 'above', 'than', 'does', 'itself', 'down', 'of', 'there', \"shan't\", 'herself', 'out', \"you've\", 'or', 'now', 'very', 'between', 'my', 'his', 'had', 'because', 'ourselves', 'during', 'them', 'only', 'we', 'mustn', 've', 'wasn', 'doing', \"don't\", 'yourselves', 'no', 'why', 'any', 'will', \"hadn't\", 'been', 'how'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# we use the list of stop words that are downloaded from nltk lib.\n",
     "import nltk\n",
@@ -1100,9 +1380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03294510000000628 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.clock()\n",
     "# we take each title and we text-preprocess it.\n",
