data having no price are kept aside

--- a/recommendationsystem.ipynb
+++ b/recommendationsystem.ipynb
@@ -809,6 +809,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     64956\n",
+      "unique     7380\n",
+      "top       Black\n",
+      "freq      13207\n",
+      "Name: color, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(data['color'].describe())\n",
+    "\n",
+    "\n",
+    "# we have 7380 unique colors\n",
+    "# 7.2% of products are black in color\n",
+    "# 64956 of 183138 products have brand information. That's approx 35.4%."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 118182),\n",
+       " ('Black', 13207),\n",
+       " ('White', 8616),\n",
+       " ('Blue', 3570),\n",
+       " ('Red', 2289),\n",
+       " ('Pink', 1842),\n",
+       " ('Grey', 1499),\n",
+       " ('*', 1388),\n",
+       " ('Green', 1258),\n",
+       " ('Multi', 1203)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "color_count = Counter(list(data['color']))\n",
+    "color_count.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Basic stats for the feature: formatted_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count      28395\n",
+      "unique      3135\n",
+      "top       $19.99\n",
+      "freq         945\n",
+      "Name: formatted_price, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    " \n",
+    "print(data['formatted_price'].describe())\n",
+    "\n",
+    "# Only 28,395 (15.5% of whole data) products with price information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 154743),\n",
+       " ('$19.99', 945),\n",
+       " ('$9.99', 749),\n",
+       " ('$9.50', 601),\n",
+       " ('$14.99', 472),\n",
+       " ('$7.50', 463),\n",
+       " ('$24.99', 414),\n",
+       " ('$29.99', 370),\n",
+       " ('$8.99', 343),\n",
+       " ('$9.01', 336)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_count = Counter(list(data['formatted_price']))\n",
+    "price_count.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic stats for the feature: title\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count                                                183138\n",
+      "unique                                               175985\n",
+      "top       Nakoda Cotton Self Print Straight Kurti For Women\n",
+      "freq                                                     77\n",
+      "Name: title, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['title'].describe())\n",
+    "\n",
+    "# All of the products have a title. \n",
+    "# Titles are fairly descriptive of what the product is. \n",
+    "# We use titles extensively in this workshop \n",
+    "# as they are short and informative.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We save data files at every major step in our processing in \"pickle\" files. If you are stuck anywhere (or) if some code takes too long to run on your laptop, you may use the pickle files we give you to speed things up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_pickle('pickels/180k_apparel_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points After eliminating price=NULL : 28395\n"
+     ]
+    }
+   ],
+   "source": [
+    "# consider products which have price information\n",
+    "# data['formatted_price'].isnull() => gives the information \n",
+    "#about the dataframe row's which have null values price == None|Null\n",
+    "data = data.loc[~data['formatted_price'].isnull()]\n",
+    "print('Number of data points After eliminating price=NULL :', data.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
